Overflow Bug Fix
Declare overflow hidden only on HTML on desktop fixes bug with horizontal scrolling.

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@ body {
   width: 100%;
   -webkit-overflow-scrolling: touch; }
 
+html {
+  overflow-x: hidden; }
+
 @media (max-width: 767px) {
   html {
     width: 100%;
